--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -130,8 +130,9 @@
 
       <% @items.each do |item| %>
         <li class='list'>
+        <%= link_to item_path(item.id) do %>
         <div class='item-img-content'>
-          <%= image_tag item.image, class: "item-img"%>
+          <%= image_tag item.image, class: "item-img" %>
 
           <%# 商品が売れていればsold outを表示しましょう %>
           <div class='sold-out'>
@@ -152,6 +153,7 @@
             </div>
           </div>
         </div>
+        <% end %>
         </li>
       <% end %>
 
