--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -24,11 +24,11 @@
     </div>
 
     <% if user_signed_in? && current_user == @item.user %>
-    <%= link_to "商品の編集", edit_item_path(@item), class: "item-red-btn" %>
+    <%= link_to "商品の編集",  "#", class: "item-red-btn" %>
     <p class="or-text">or</p>
-    <%= link_to "削除", item_path(@item), method: :delete, class:"item-destroy" %>
+    <%= link_to "削除",  "#", method: :delete, class:"item-destroy" %>
     <% end %>
-    <% if user_signed_in? %>
+    <% if user_signed_in? && !current_user == @item.user%>
     <%# 商品が売れていない場合はこちらを表示しましょう %> 
 
     <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
@@ -42,7 +42,7 @@
       <tbody>
         <tr>
           <th class="detail-item">出品者</th>
-          <td class="detail-value"><%= @item.item_name %></td>
+          <td class="detail-value"><%= @item.user.name %></td>
         </tr>
         <tr>
           <th class="detail-item">カテゴリー</th>
