--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -19,7 +19,7 @@
         ¥<%= @item.price %>
       </span>
       <span class="item-postage">
-        <%= "配送料負担" %>
+        <%= @item.shipping_charge.name %>
       </span>
     </div>
 
@@ -30,7 +30,7 @@
         <%= link_to '削除', item_path(@item), method: :delete, class:'item-destroy' %>
       <% else %>
       <%# 商品が売れていない場合はこちらを表示しましょう %> 
-        <%= link_to '購入画面に進む', item_path(@item), class:"item-red-btn"%>
+        <%= link_to '購入画面に進む',   item_purchases_path(@item), class:"item-red-btn"%>
         <%# //商品が売れていない場合はこちらを表示しましょう %>
       <% end %>
     <% end %>
